--- a/tex/introduction.tex
+++ b/tex/introduction.tex
@@ -28,3 +28,6 @@ from general framework in specific work but the fundamentals are usually quite s
 \chapter{Modelling the Generalized Setup}
 To model the maintenace process in its entirety we will need tool that are powerful enough to describe the system. The system will be described in accordance 
 with the \ref{top-level-schedule-overview.png} \cite{palmer_maintenance_2019}.
+
+The maintenance scheduling problem is NP-hard and real-time optimal solutions will never be a feasible approach unless we use a multi-model setup where each model enriches the 
+overall solution in the way that it is most capable of. 
