--- a/tex/introduction.tex
+++ b/tex/introduction.tex
@@ -16,13 +16,13 @@ This section will provide an overview of the maintenance scheduling process in t
 throughly as most industries that perform maintanance of a considerable scale follow this process. Many industries are of course unique and deviate
 from general framework in specific work but the fundamentals are usually quite similar. 
 
-\begin{figure}[H]
+\begin{figure}
 \includegraphics[width=1.0\textwidth]{figures/top-level-schedule-overview.png}
 \label{top-level-schedule-overview.png}
 \end{figure}
 
 
-This figure shows
+This figure shows 
 
 
 
@@ -32,3 +32,49 @@ with the \ref{top-level-schedule-overview.png} \cite{palmer_maintenance_2019}.
 
 The maintenance scheduling problem is NP-hard and real-time optimal solutions will never be a feasible approach unless we use a multi-model setup where each model enriches the 
 overall solution in the way that it is most capable of. 
+
+
+
+\section{The Strategic Model}
+The Strategic model is responsible for grouping work orders into weekly or biweekly periods depending on which kind of maintenance setup that one is running.
+This kind of model closely resembles a variant of the multi-compartment multi-knapsack problem.
+
+
+\begin{align}
+	& \text{Min} \quad \sum_{i \in I} \sum_{k \in K} v_{ik}(t) \cdot x_{ik} + \sum_{k \in K} \sum_{c \in C} pen \cdot p_{kc}   \label{eqn:objective_function_strategic} \\[1em]
+    & \text{subject to:} \notag                                                                                                    \\[1em]
+	& \sum_{i \in I} w_{ic} \cdot x_{ik} \leq \ cap_{kc}(t) + p_{kc}&& \forall k \in K, \forall c \in C   \label{eqn:capacity_constraint}          \\[1em]
+	& \sum_{i \in I} x_{ik} = 1                                 && \forall k \in K                    \label{eqn:single_workorder_constraint}  \\[1em]
+	& x_{ik} = 0                                                  && \forall (i, k) \in Q(t)            \label{eqn:exclusion_constraint}         \\[1em]
+	& x_{ik} = 1                                                  && \forall (i, k) \in P(t)            \label{eqn:inclusion_constraint}         \\[1em]
+	& x_{ik} \in \{0, 1\}                                         && \forall i \in I, \forall k \in K   \label{eqn:x_integrality_constraint}     \\[1em] 
+	& p_{kc} \in \mathbb{R}^{+}                                   && \forall k \in K, \forall c \in C   \label{eqn:p_non_negativity_constraint}  \\[1em]
+\end{align}
+
+Here the model is shown. 
+
+\section{The Tactical Model}
+After the strategic model has optimized its schedule the tactical agent will continue scheduling the output at a more detailed level. This means that now the tactical agent will schedule 
+out on each of the days of the work orders scheduled by the strategic agent. 
+
+The tactical model is responsible for providing an initial suggestion for a weekly schedule, below we see the model for the tactical agent.
+
+
+\begin{align}
+	& \text{Min} \quad \sum_{i \in I} v_{c}(t) \cdot y_{dj}(t) + \sum_{c \in C} \sum_{d \in D} pen \cdot p_{cd}\\  
+	& \text{subject to:} \notag \\
+	& \sum_{j \in J} w_{cj} \cdot y_{dj} \leq R_{dc} + p^y_{dc} && \forall \\ d \in D, \forall c \in C \\ 
+	& \sum_{d \in D} d \cdot y_{di} + \Delta_i \leq \sum_{d \in D} d \cdot y_{dj} && \forall (i, j) \in Pred \\ 
+	& 
+\end{align}
+
+
+
+
+\section{The Supervisor Model}
+
+
+\section{The Operational Model}
+
+
+
