short text on supervisor agent

--- a/tex/introduction.tex
+++ b/tex/introduction.tex
@@ -72,6 +72,14 @@ The tactical model is responsible for providing an initial suggestion for a week
 
 
 \section{The Supervisor Model}
+The maintenance supervisor should be considered the most central person in a maintenance scheduling setup. All the work of the planner and scheduler is only to be considered a service for the supervisor.
+The supervisor has multiple different responsibilities among them are: 
+
+\begin{itemize}
+	\item Assigning work orders
+	\item Creating a daily schedule
+	\item 
+\end{itemize}
 
 
 \section{The Operational Model}
