--- a/tex/introduction.tex
+++ b/tex/introduction.tex
@@ -36,6 +36,13 @@ overall solution in the way that it is most capable of.
 
 
 \section{The Strategic Model}
+
+
+\begin{itemize}
+	\item 
+	\item 
+\end{itemize}
+
 The Strategic model is responsible for grouping work orders into weekly or biweekly periods depending on which kind of maintenance setup that one is running.
 This kind of model closely resembles a variant of the multi-compartment multi-knapsack problem.
 
@@ -54,22 +61,21 @@ This kind of model closely resembles a variant of the multi-compartment multi-kn
 Here the model is shown. 
 
 \section{The Tactical Model}
+\begin{itemize}
+	\item 
+	\item 
+\end{itemize}
 After the strategic model has optimized its schedule the tactical agent will continue scheduling the output at a more detailed level. This means that now the tactical agent will schedule 
 out on each of the days of the work orders scheduled by the strategic agent. 
 
 The tactical model is responsible for providing an initial suggestion for a weekly schedule, below we see the model for the tactical agent.
-
 
 \begin{align}
 	& \text{Min} \quad \sum_{i \in I} v_{c}(t) \cdot y_{dj}(t) + \sum_{c \in C} \sum_{d \in D} pen \cdot p_{cd}\\  
 	& \text{subject to:} \notag \\
 	& \sum_{j \in J} w_{cj} \cdot y_{dj} \leq R_{dc} + p^y_{dc} && \forall \\ d \in D, \forall c \in C \\ 
 	& \sum_{d \in D} d \cdot y_{di} + \Delta_i \leq \sum_{d \in D} d \cdot y_{dj} && \forall (i, j) \in Pred \\ 
-	& 
 \end{align}
-
-
-
 
 \section{The Supervisor Model}
 The maintenance supervisor should be considered the most central person in a maintenance scheduling setup. All the work of the planner and scheduler is only to be considered a service for the supervisor.
@@ -81,6 +87,10 @@ The supervisor has multiple different responsibilities among them are:
 	\item 
 \end{itemize}
 
+\begin{align}
+    
+
+\end{align}
 
 \section{The Operational Model}
 
