added: models | added: modular structure to research

--- a/tex/introduction.tex
+++ b/tex/introduction.tex
@@ -16,7 +16,7 @@ throughly as most industries that perform maintanance of a considerable scale fo
 from general framework in specific work but the fundamentals are usually quite similar. 
 
 \begin{figure}
-\includegraphics[width=1.0\textwidth]{figures/top-level-schedule-overview.png}
+\includegraphics[width=1.0\textwidth]{../figures/top-level-schedule-overview.png}
 \label{top-level-schedule-overview.png}
 \end{figure}
 
