--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -24,23 +24,24 @@
 \tableofcontents
 
 \begin{multicols}{2}
-\input{tex/introduction}
-\input{tex/literature_review}
-\input{tex/models/strategic.tex}
-\input{tex/models/tactical.tex}
-\input{tex/models/supervisor.tex}
-\input{tex/models/operational.tex}
-\input{tex/actor-based-large-neighborhood-search}
-\input{tex/multi-agent-scheduling-system}
-\input{tex/verification-study}
-\input{tex/discussion}
-\input{tex/conclusion}
+\input{../tex/introduction}
+\input{../tex/literature_review}
+\input{../tex/tables/parameter_table.tex}
+\input{../tex/models/strategic.tex}
+\input{../tex/models/tactical.tex}
+\input{../tex/models/supervisor.tex}
+\input{../tex/models/operational.tex}
+\input{../tex/actor-based-large-neighborhood-search}
+\input{../tex/multi-agent-scheduling-system}
+\input{../tex/verification-study}
+\input{../tex/discussion}
+\input{../tex/conclusion}
 \end{multicols}
 \appendix
-\input{appendices/appendixA}
+\input{../appendices/appendixA}
 
 
 \bibliographystyle{plainnat}
-\bibliography{bib/references}
+\bibliography{../bib/references}
 
 \end{document}
