--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -24,6 +24,7 @@
 \tableofcontents
 
 \begin{multicols}{2}
+\input{../tex/definitions.tex}
 \input{../tex/introduction}
 \input{../tex/literature_review}
 \input{../tex/tables/parameter_table.tex}
